k8s/overlays/dev/patches/app-deployment-rolling-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1        
      maxUnavailable: 0   
  template:
    spec:
      terminationGracePeriodSeconds: 10
