k8s/overlays/dev/patches/fix-blog-app-runtime.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
spec:
  template:
    spec:
      securityContext:
        fsGroup: 101
      containers:
        - name: blog-app
          command: ["nginx"]
          args: ["-g","daemon off;"]
          ports: [{ containerPort: 80 }]
          volumeMounts:
            - { name: html,        mountPath: /usr/share/nginx/html }
            - { name: nginx-cache, mountPath: /var/cache/nginx }
            - { name: nginx-run,   mountPath: /var/run/nginx }
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              add: ["NET_BIND_SERVICE"]
      volumes:
        - name: html
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
