k8s/overlays/dev/patches/fix-postgres-perms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
