k8s/overlays/dev/patches/postgres-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  # replicas: 1
  template:
    spec:
      serviceAccountName: blog-postgres
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          # image: postgres:16.3
          resources:
            requests: { cpu: "2", memory: "512Mi"}
            limits:  { cpu: "4",  memory: "1Gi"}
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 999
          readinessProbe:
            exec:
              command: ["sh","-c","pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -h 127.0.0.1 -p 5432"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["sh","-c","pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -h 127.0.0.1 -p 5432"]
            initialDelaySeconds: 15
            periodSeconds: 10
